Fixing a typo on tip 1

--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -2,7 +2,7 @@
 title: 'How To Upload a File'
 id: '1-upload-a-file'
 slug: /1-upload-a-file
-sidebar_label: How To Upload s File
+sidebar_label: How To Upload a File
 text: 'Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted with a dialog box that is just out of reach of your automation script.'
 hide_table_of_contents: true
 level: 1
