--- a/frontend/tips/3-work-with-frames/_java.mdx
+++ b/frontend/tips/3-work-with-frames/_java.mdx
@@ -1,127 +1,48 @@
-## Example 1
+import TipCode from "@site/src/components/tipCode";
 
-First we'll need to import our requisite classes (for annotations (e.g., `org.junit.After`, etc.), driving the browser with Selenium (e.g., `org.openqa.selenium.WebDriver`, etc.), and matchers for our assertions (e.g., `org.hamcrest.CoreMatchers`, etc.)) and start our class with some setup and teardown methods.
+## TL;DR - Show Me The Code
 
-```java
-// filename: Frames.java
+<TipCode codePath={"3-work-with-frames/code/java/src/test/java/com/elemental/selenium/FramesTest.java"}
+         language={"java"}/>
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.openqa.selenium.By;
-import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
-import org.openqa.selenium.firefox.FirefoxDriver;
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.assertThat;
+## Code Walkthrough
 
-public class Frames {
-    WebDriver driver;
+### Importing Libraries, Setup and Teardown
 
-    @Before
-    public void setUp() throws Exception {
-        driver = new FirefoxDriver();
-    }
+Lines 3 to 10 are importing our requisite classes (for annotations (e.g., `org.junit.After`, etc.), driving the
+browser with Selenium (e.g., `org.openqa.selenium.WebDriver`, etc.), and matchers for our assertions
+(e.g., `org.junit.jupiter.api.Assertions`, etc.)) and start our class with some setup and teardown methods.
 
-    @After
-    public void tearDown() throws Exception {
-        driver.quit();
-    }
-// ...
-```
+Next, we'll start our class off with some setup and teardown methods, covered in lines 13 to 25.
 
-Now onto our test. In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from [the-internet](https://github.com/tourdedave/the-internet).
+### Example 1
 
-```java
-// filename: Frames.java
-// ...
-    @Test
-    public void nestedFrames() throws Exception {
-        driver.get("http://the-internet.herokuapp.com/nested_frames");
-        driver.switchTo().frame("frame-top");
-        driver.switchTo().frame("frame-middle");
-        assertThat(driver.findElement(By.id("content")).getText(), is(equalTo("MIDDLE")));
-    }
-// ...
-```
+Line 28 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+[the-internet](https://github.com/tourdedave/the-internet).
 
-With Selenium's [`.switchTo()`](https://seleniumhq.github.io/selenium/docs/api/java/org/openqa/selenium/WebDriver.html#switchTo--) method we can easily switch to the frame we want. When using it for frames (e.g., `driver.switchTo().frame();`) it accepts either an ID or name attribute. But in order to get the text of the middle frame (e.g., a frame nested within another frame), we need to switch to the parent frame (e.g., the top frame) first _and then_ switch to the child frame (e.g., the middle frame).
+With Selenium's `.switchTo()` method we can easily switch to the frame we want. When using it for frames
+(e.g., `driver.switchTo().frame();`) it accepts either an ID or name attribute. But in order to get the text of the
+middle frame (e.g., a frame nested within another frame), we need to switch to the parent frame (e.g., the top frame)
+first _and then_ switch to the child frame (e.g., the middle frame).
 
-Once we've done that we're able to find the element we need, grab it's text, and assert that it's what we expect.
+Once we've done that we're able to find the element we need, grab its text, and assert that it's what we expect.
 
 While this example helps illustrate the point of frame switching, it's not very practical.
 
 ## Example 2
-Here is a more likely example you'll run into -- working with a WYSIWYG Editor like [TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
-```java
-// filename: Frames.java
-// ...
-    @Test
-    public void iFrames() throws Exception {
-        driver.get("http://the-internet.herokuapp.com/tinymce");
-        driver.switchTo().frame("mce_0_ifr");
-        WebElement editor = driver.findElement(By.id("tinymce"));
-        String beforeText = editor.getText();
-        editor.clear();
-        editor.sendKeys("Hello World!");
-        String afterText = editor.getText();
-        assertThat(afterText, not(equalTo((beforeText))));
-// ...
-```
+Here is a more likely example you'll run into -- working with a WYSIWYG Editor like [TinyMCE](http://www.tinymce.com/). You can see the
+page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
-Once the page loads we switch into the frame that contains TinyMCE and...
+### Executing the Test
 
-+ grab the original text and store it
-+ clear and input new text
-+ grab the new text value
-+ assert that the original and new texts are not the same
+Before executing the test, we need to make sure the required dependencies are declared on the `pom.xml` file.
 
-Keep in mind that if we need to access a part of the page outside of the frame we're currently in we'll need to switch to it. Thankfully Selenium has a method that enables us to quickly jump back to the top level of the page -- [`driver.switchTo().defaultContent();`](https://seleniumhq.github.io/selenium/docs/api/java/org/openqa/selenium/WebDriver.TargetLocator.html#defaultContent--).
+<details>
+    <summary>Toggle to see the <code>pom.xml</code> file.</summary>
+    <div>
+        <TipCode codePath={"3-work-with-frames/code/java/pom.xml"} language={"xml"}/>
+    </div>
+</details>
 
-Here is what that looks like in practice.
-
-```java
-// filename: Frames.java
-// ...
-        driver.switchTo().defaultContent();
-        assertThat(driver.findElement(By.cssSelector("h3")).getText(),
-                is("An iFrame containing the TinyMCE WYSIWYG Editor"));
-    }
-
-}
-```
-
-## Expected Behavior
-
-When you save this file and run it (e.g., `mvn clean test` from the command-line) here is what will happen:
-
-<u>Example 1</u>
-
-+ Open the browser
-+ Visit the page
-+ Switch to the nested frame
-+ Grab the text from the frame and assert that Selenium is in the correct place
-+ Close the browser
-
-<u>Example 2</u>
-
-+ Open the browser
-+ Visit the page
-+ Switch to the frame that contains the TinyMCE editor
-+ Find and store the text in the editor
-+ Clear the text in the editor
-+ Input new text in the editor
-+ Find and store the new text in the editor
-+ Assert that the original and new text entries don't match
-+ Switch to the top level of the page
-+ Grab the text from the top of the page and assert it's what we expect
-+ Close the browser
-
-## Summary
-
-Now you're ready to handily defeat frames when they cross your path.
-
-Thanks to [Roman Isko](https://github.com/RomanIsko) for contributing the initial Java code for this tip.
-
-Happy Testing!
+Finally, we can run the test by executing `mvn test` from the command-line.
