--- a/frontend/tips/3-work-with-frames/_ruby.mdx
+++ b/frontend/tips/3-work-with-frames/_ruby.mdx
@@ -1,64 +1,34 @@
-## Example 1
+import TipCode from "@site/src/components/tipCode";
 
-We'll first need to pull in our requisite libraries (`selenium-webdriver` to drive the browser, and `rspec/expecations` & `RSpec::Matchers` to perform our assertions) and wire up some simple `setup`, `teardown`, and `run` methods.
+## TL;DR - Show Me The Code
 
-```ruby
-# filename: frames.rb
+<TipCode codePath={"3-work-with-frames/code/ruby/frames.rb"} language={"rb"}/>
 
-require 'selenium-webdriver'
-require 'rspec/expectations'
-include RSpec::Matchers
+## Code Walkthrough
 
-def setup
-  @driver = Selenium::WebDriver.for :firefox
-end
+### Importing Libraries, Setup and Teardown
 
-def teardown
-  @driver.quit
-end
+We'll first need to pull in our requisite libraries (`selenium-webdriver` to drive the browser, and
+`rspec/expecations` & `RSpec::Matchers` to perform our assertions) and wire up some simple `setup`, `teardown`,
+and `run` methods.
 
-def run
-  setup
-  yield
-  teardown
-end
-```
+### Example 1
 
-Now onto our test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) which can be found on [the-internet](https://github.com/tourdedave/the-internet).
+Line 20 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+[the-internet](https://github.com/tourdedave/the-internet).
 
-```ruby
-run do
-  @driver.get 'http://the-internet.herokuapp.com/nested_frames'
-  @driver.switch_to.frame('frame-top')
-  @driver.switch_to.frame('frame-middle')
-  expect(@driver.find_element(id: 'content').text).to eql 'MIDDLE'
-end
-```
-
-With Selenium's [`.switch_to.frame`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/TargetLocator.html#frame-instance_method) method we can simply switch to the frame we want. It accepts either an ID or name attribute, but in order to get the text of the middle frame (e.g., a frame nested within another frame), we need to switch to the parent frame (e.g., the top frame) and then switch to the child frame (e.g., the middle frame).
+With Selenium's [`.switch_to.frame`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/TargetLocator.html#frame-instance_method) method we can simply switch to the frame we want. It accepts either an
+ID or name attribute, but in order to get the text of the middle frame (e.g., a frame nested within another frame),
+we need to switch to the parent frame (e.g., the top frame) and then switch to the child frame (e.g., the middle frame).
 
 Once we've done that we're able to find the element we need, grab it's text, and assert that it's what we expect.
 
 While this example helps illustrate the point of frame switching, it's not very practical.
 
-## Example 2
+### Example 2
 
-Here is a more likely example you'll run into -- working with a WYSIWYG (What You See Is What You Get) Editor like [TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
-
-```ruby
-# filename: frames.rb
-
-run do
-  @driver.get 'http://the-internet.herokuapp.com/tinymce'
-  @driver.switch_to.frame('mce_0_ifr')
-  editor = @driver.find_element(id: 'tinymce')
-  before_text = editor.text
-  editor.clear
-  editor.send_keys 'Hello World!'
-  after_text = editor.text
-  expect(after_text).not_to eql before_text
-end
-```
+Here is a more likely example you'll run into -- working with a WYSIWYG (What You See Is What You Get) Editor like
+[TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
 Once the page loads we switch into the frame that contains TinyMCE and...
 
@@ -67,41 +37,20 @@ Once the page loads we switch into the frame that contains TinyMCE and...
 + grab the new text value
 + assert that the original and new texts are not the same
 
-Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to switch to it. Thankfully Selenium has a method that enables us to quickly jump back to the top level of the page -- [`switch_to.default_content`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/TargetLocator.html#default_content-instance_method).
+Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to
+switch to it. Thankfully Selenium has a method that enables us to quickly jump back to the top level of the page --
+`switch_to.default_content`.
 
-Here is what that looks like in practice
+### Executing the Test
 
-```ruby
-  @driver.switch_to.default_content
-  expect(@driver.find_element(css: 'h3').text).not_to be_empty
-```
+Before executing the test, we need to make sure the required dependencies are declared on the `Gemfile` file.
 
-## Expected Behavior
+<details>
+    <summary>Toggle to see the <code>Gemfile</code> file.</summary>
+    <div>
+        <TipCode codePath={"3-work-with-frames/code/ruby/Gemfile"} language={"txt"}/>
+    </div>
+</details>
 
-If we save the file and run it (e.g., `ruby frames.rb` from the command-line) here is what will happen:
 
-<u>Example 1</u>
-
-+ Open the browser
-+ Visit the page
-+ Switch to the nested frame
-+ Grab the text from the frame and assert that Selenium is in the correct place
-+ Close the browser
-
-<u>Example 2</u>
-
-+ Open the browser
-+ Visit the page
-+ Switch to the frame that contains the TinyMCE editor
-+ Grab and clear the text in the editor
-+ Input and grab new text in the edtitor
-+ Assert that the original and new text entries don't match
-+ Switch to the top level of the page
-+ Grab the text from the top of the page and assert that it's not empty
-+ Close the browser
-
-## Summary
-
-Now you can readily defeat frames when they cross your path.
-
-Happy Testing!
+Finally, we can run the test by executing `ruby frames.rb` from the command-line.
