Updating links for the-internet

--- a/frontend/tips/3-work-with-frames/_csharp.mdx
+++ b/frontend/tips/3-work-with-frames/_csharp.mdx
@@ -16,8 +16,8 @@ Next, we'll start our class off with some setup and teardown methods, covered in
 
 ### Example 1
 
-Line 23 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
-[the-internet](https://github.com/tourdedave/the-internet).
+Line 23 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+[the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's `.SwitchTo()` method we can easily switch to the frame we want. When using it for frames
 (e.g., `Driver.SwitchTo().Frame();`) it accepts either an ID or name attribute. But in order to get the text of the
